fixed login on mobile5

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -105,9 +105,15 @@
   .header {
     height: 620px;
     width: 100%;
-    padding: 10px;
-    padding-top: 80px;
+    padding: 5px;
+    padding-top: 110px;
   }
+
+  .header_content {
+    padding: 5px;
+  }
+
+  .header_content h1 {}
 
   .sign-in {
     width: 100%;
@@ -120,6 +126,8 @@
   .nav-bar button {
     width: 100px;
     padding: 6px;
+    position: absolute;
+    right: 0;
   }
 
   .nav-bar button>p {
